//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package net;

import "com/sandpolis/core/proto/util/generator.proto";

option java_package = "com.sandpolis.core.proto.net";
option optimize_for = CODE_SIZE;

/**
 * Request the server to generate an output.
 */
message RQ_Generate {
    // The configuration for the generator
    util.GenConfig config = 1;
}

/**
 * Respond to a generation request.
 */
message RS_Generate {
    // A report from the generator
    util.GenReport report = 1;

    // The output of the generator
    bytes output = 2;
}
